[package]
name = "owlish"
version = "0.4.0"
edition = "2021"
description = "OWL 2 implementation with wasm support and turtle parsing"
authors = ["Field33", "Florian Loers <florianloers@mailbox.org>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
iref = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
harriet = "0.1"
