[package]
name = "owlish"
version = "0.4.3"
edition = "2021"
description = "OWL 2 implementation with wasm support and turtle parsing"
authors = ["Field33", "Florian Loers <florianloers@mailbox.org>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]
wasm = ["wasm-bindgen"]

[dependencies]
iref = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", features = [
    "serde-serialize",
], optional = true }
js-sys = "0.3"
harriet = "0.2"
time = { version = "0.3", features = ["formatting"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
